<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    tools:context=".views.LogInActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusableInTouchMode="true">

        <!-- Usar wrap_content cuando tenga los iconos en buen tamano -->
        <ImageView
            android:id="@+id/log_in_logo"
            android:layout_width="250dp"
            android:layout_height="113dp"
            android:layout_marginTop="@dimen/log_in_logo_vertical_margin"
            android:layout_marginBottom="@dimen/log_in_logo_vertical_margin"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_name_company"/>


        <android.support.v7.widget.CardView
            android:id="@+id/log_in_bg_card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="@dimen/log_in_form_vertical_padding"
                android:paddingBottom="@dimen/log_in_form_vertical_padding"
                android:orientation="vertical">

            <EditText
                android:id="@+id/log_in_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:layout_marginBottom="@dimen/log_in_fields_bottom_margin"
                android:hint="@string/log_in_name_hint"/>

            <EditText
                android:id="@+id/log_in_surname_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:layout_marginBottom="@dimen/log_in_fields_bottom_margin"
                android:hint="@string/log_in_surname_hint"/>

            <EditText
                android:id="@+id/log_in_dob_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/log_in_fields_bottom_margin"
                android:focusable="false"
                android:hint="@string/log_in_dob_hint"/>

            <EditText
                android:id="@+id/log_in_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:layout_marginBottom="@dimen/log_in_fields_bottom_margin"
                android:inputType="textEmailAddress"
                android:hint="@string/log_in_email_hint"/>

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/log_in_practice_id_autocomplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/log_in_last_field_bottom_margin"
                android:hint="@string/log_in_practice_id_hint"/>

            <TextView
                android:id="@+id/log_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/log_in_button_bg"
                android:padding="10dp"
                android:text="@string/log_in_start"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center"
                android:clickable="true"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
