<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5e5e5"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.consultpal.android.views.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/welcome_top_padding"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/welcome_practice_picture"
            android:scaleType="centerCrop"
            android:layout_width="@dimen/welcome_image_size"
            android:layout_height="@dimen/welcome_image_size"
            android:padding="1dp"
            android:cropToPadding="true"
            android:background="@drawable/imageview_square_border"/>

        <TextView
            android:id="@+id/welcome_practice_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textSize="@dimen/welcome_text_size"
            android:text="Welcome to [Practice Place]"/>

        <TextView
            android:id="@+id/welcome_practice_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/welcome_text_size"
            android:layout_marginBottom="5dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/welcome_consent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/welcome_text_size"
            android:text="@string/welcome_consent_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/welcome_continue_button"
            android:background="@drawable/continue_button_bg"/>

        <TextView
            android:id="@+id/welcome_exit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/welcome_exit_button"
            android:background="@drawable/exit_button_bg"/>

        <com.pnikosis.materialishprogress.ProgressWheel
            android:id="@+id/welcome_progress_bar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:matProg_barColor="@color/colorAccent"
            app:matProg_progressIndeterminate="true"
            android:visibility="gone"/>

    </LinearLayout>


</RelativeLayout>
