<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b7b7b7"
    tools:context="com.consultpal.android.views.SessionActivity">

    <RelativeLayout
        android:id="@+id/session_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/session_top_layout_bg"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/session_top_picture_vertical_margin"
        android:paddingRight="@dimen/session_top_picture_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/session_practice_picture"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:layout_width="@dimen/session_top_picture_size"
            android:layout_height="@dimen/session_top_picture_size"
            android:layout_marginEnd="@dimen/session_top_picture_vertical_margin"
            android:layout_marginRight="@dimen/session_top_picture_vertical_margin"
            android:padding="1dp"
            android:cropToPadding="true"
            android:background="@drawable/imageview_square_border"/>

        <TextView
            android:id="@+id/session_top_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/session_practice_picture"
            android:layout_toEndOf="@+id/session_practice_picture"
            android:textColor="#242424"
            android:textSize="@dimen/session_top_text_size"
            android:text="@string/session_top_message_practice"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/session_symptoms_recycler_view"
        android:layout_below="@+id/session_top_layout"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/session_bottom_layout"
        tools:listitem="@layout/symptom_list_item"/>

    <LinearLayout
        android:id="@+id/session_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="6dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:background="@drawable/session_top_layout_bg">

        <RelativeLayout
            android:id="@+id/session_messages_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/session_messages"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/session_button_bg"
                android:text="@string/session_messages_button"
                android:padding="10dp"
                android:textSize="@dimen/session_bottom_buttons_text_size"
                android:clickable="true"
                android:textColor="@color/white"
                android:gravity="center"
                android:drawableTop="@drawable/ic_message_white_24dp"/>

            <TextView
                android:id="@+id/session_new_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_margin="10dp"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorAccent"
                android:background="@drawable/new_message_bg"
                android:visibility="gone"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:id="@+id/session_countdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/session_chronometer_bg"
                android:text="00:00"
                android:textStyle="bold"
                android:textSize="@dimen/session_bottom_buttons_text_size"
                android:textColor="@color/grey_regular_text"
                android:layout_marginBottom="3dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/session_help_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/session_button_bg"
                android:text="@string/session_help_button"
                android:textSize="@dimen/session_bottom_buttons_text_size"
                android:textColor="@color/white"
                android:gravity="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/session_finish_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:background="@drawable/session_button_bg"
            android:text="@string/session_finish_button"
            android:textSize="@dimen/session_bottom_buttons_text_size"
            android:clickable="true"
            android:textColor="@color/white"
            android:gravity="center"
            android:drawableTop="@drawable/ic_send_white_24dp"/>
    </LinearLayout>

</RelativeLayout>
